--- a/caravan/style.css
+++ b/caravan/style.css
@@ -29,19 +29,31 @@ header.heading{
 .nav-list-item{
   list-style: none;
   display: inline-block;
-  margin: 0 10px;
+  margin: 0 20px;
 }
 
 .main-visual{
   width: 100%;
   height: 300px;
-  background-color: orange;
+  background-image: url(img/mv.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .main-visual-content{
-  width: 350px;
+  width: 40%;
   height: 300px;
-  background-color: gold;
+  background-color: rgba(0,0,0,0.5);
+  text-align: center;
+  padding-top: 105px;
+}
+.main-visual-text{
+  color: #fff;
+}
+
+.main-visual-name{
+  margin-top: 30px;
+  color: #fff;
 }
 
 .main{
